a href instead of btn href

--- a/index.html
+++ b/index.html
@@ -104,8 +104,8 @@
                 <p class="contact-message">
                     We will definitely create something worthful and awesome.
                 </p>
-                <btn class="btn" href="mailto:mkrivickas@gmail.com"
-                    >CONTACT ME</btn
+                <a class="btn" href="mailto:mkrivickas@gmail.com"
+                    >CONTACT ME</a
                 >
             </div>
         </div>
